--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "vite build",
     "build:server": "tsc -p tsconfig.server.json",
     "start": "node dist-server/index.js",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:nsil": "tsx scripts/nsilSimulation.ts"
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
