Atomic design refactor for CommandCenter, enhanced Discovery sections, and bug fixes

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,5 +1,5 @@
 # ═══════════════════════════════════════════════════════════════════════════════
-# BW NEXUS AI - PRODUCTION ENVIRONMENT CONFIGURATION
+# BWGA Intelligence AI - PRODUCTION ENVIRONMENT CONFIGURATION
 # ═══════════════════════════════════════════════════════════════════════════════
 # 
 # Copy this file to .env and fill in your API keys
