--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-# BW Nexus AI - Configuration Template
+# BWGA Intelligence AI - Configuration Template
 # Copy this file to .env.local and fill in your values
 
 # Google Gemini API Configuration
