--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-# Render Blueprint for BW Nexus AI
+# Render Blueprint for BWGA Intelligence AI
 # https://render.com/docs/blueprint-spec
 
 services:
