--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.13.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "docx": "^8.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "framer-motion": "^12.23.25",
