Rewrite Command Center proposal narrative + regional bottleneck framing

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ server/data/
 
 # Local test artifacts
 e2e-check.json
+
+# Local content extraction artifacts
+_doc209_extracted.txt
+
+# Local build output artifacts
+build_output.txt
