--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "pdf-parse": "^2.4.5",
     "playwright": "^1.57.0",
     "tsx": "^4.19.1",
     "typescript": "~5.8.2",
