Fix ESLint errors - unused variables and any types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
     "resolveJsonModule": true,
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "include": ["**/*.ts", "**/*.tsx", "data/**/*"]
 }
