--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:nsil": "tsx scripts/nsilSimulation.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.981.0",
     "@google/genai": "^1.30.0",
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.13.2",
