--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,14 @@ REACT_APP_USE_REAL_BACKEND=true
 REACT_APP_SHOW_DEMO_INDICATORS=false
 VITE_ENABLE_SELF_LEARNING=true
 
+# Enable external data sources (World Bank, Numbeo, OpenCorporates)
+VITE_ENABLE_EXTERNAL_DATA=true
+# NUMBEO_API_KEY or VITE_NUMBEO_API_KEY for frontend
+# VITE_NUMBEO_API_KEY=your-numbeo-key
+# OPEN_CORPORATES_API_KEY=your-opencorporates-key
+# VITE_GEMINI_API_KEY=your-gemini-key
+VITE_DEBUG_RESEARCH=true
+
 # ============================================
 # Autonomous Mode
 # ============================================
